--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="position_img_accueil">
 
-        <img class="img_acceuil" src="img\accueil_1.jpg">
+        <img class="img_acceuil" src="accueil_1.jpg">
 
     </div>
     
