--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="linear-gradient">
+
     <p class="texte_titre">Le trail, plus qu'une passion</p>
     <h1>Ludovic Bailly Basin</h1>
 
@@ -18,5 +20,6 @@
     </div>
     <br>
     <br>
+</div>
 </body>
 </html>
