--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <img class="img_acceuil" src="accueil_1.jpg">
 
     </div>
+
+    <p class="titre_image">Marathon du Mont-blanc 2019</p>
     <br>
     <br>
 </div>
