--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ludovic Bailly Basin</title>
     <link rel="stylesheet" href="style.css">
+
+    <style>
+       
+
+    </style>
+
+
+
 </head>
 <body>
     <div class="linear-gradient">
