--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <img class="img_acceuil" src="accueil_1.jpg">
 
-        <p class="titre_image">Marathon du Mont-blanc 2019</p>
-
     </div>
 
-
+        <div align="center">
+            <p class="titre_image">Marathon du Mont-blanc 2019</p>
+        </div>
     <br>
     <br>
 </div>
