--- a/index.html
+++ b/index.html
@@ -15,23 +15,24 @@
 
 </head>
 <body>
+
     <div class="linear-gradient">
 
-    <p class="texte_titre">Le trail, plus qu'une passion</p>
-    <h1>Ludovic Bailly Basin</h1>
+        <div class="titre">
+        <p class="text_titre">Le trail, plus qu'une passion</p>
+        <h1 class="nom_coureur">Ludovic Bailly Basin</h1>
+        </div>
 
-
-    <div class="position_img_accueil">
-
-        <img class="img_acceuil" src="accueil_1.jpg">
-
-    </div>
 
         <div align="center">
-            <p class="titre_image">Marathon du Mont-blanc 2019</p>
+        <img class="image_accueil" src="accueil_1.jpg">
+
+
+        <p class="titre_image">Marathon du Mont-blanc 2019</p>
+
         </div>
+
     <br>
-    <br>
-</div>
+    </div>
 </body>
 </html>
