--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <div class="linear-gradient">
 
         <div class="titre">
-        <p class="text_titre">Le trail, plus qu'une passion</p>
+        <p class="text_titre">Le trail,</p>
+        <p class="text_titre"> plus qu'une passion</p>
+        <br>
         <h1 class="nom_coureur">Ludovic Bailly Basin</h1>
         </div>
 
